Apply Vitaliy feedback